Change in model names

--- a/NestCountsImputation_JM.Rmd
+++ b/NestCountsImputation_JM.Rmd
@@ -7,7 +7,8 @@ output: html_document
 rm(list=ls())
 knitr::opts_chunk$set(echo = TRUE)
 source("HILL_BiOp_functions.R")
-run.date <- "2018-10-12"
+run.date <- "2018-10-23"
+run.date1 <- "2018-10-24"
 ```
 
 This document describes how leatherback turtle nest count data were imputed for Jamursba-Medi. All models were ran separately and results stored in .rds files. 
@@ -55,41 +56,17 @@ y[t] ~ N(x[t], v.obs)
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_JM_1999_2017_",
                     run.date, ".rds"))
 
-M1.loo.out <- M$loo.out$loo.out
-M1.jm <- M$jm
+M1.loo.out <- M$jags.out$loo.out$loo.out
+M1.jm <- M$jags.out$jm
 ```
 
-Diagnostics of the expected log predictive density indicated that the model was not appropriate, where all estimated Pareto k statistics (a measure of model fit - TRUE?) were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+Diagnostics of the expected log predictive density indicated that the model was not appropriate, where all estimated Pareto k statistics (a measure of model fit - TRUE?) were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M1.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M1.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M1.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M1, fig.cap = "Figure. PSIS diagnostic plot for M1"}
 plot(M1.loo.out)
 ```
 
-Because of the poor predictive performance, we do not use this model for imputation.
-
-The second model is similar to the first except there were two slope parameters: one for January through July and another for August through December. These corresponded to before and after the peak of each nesting season in August. The model is as follows:
-
-m[t] = s[t] + x[t-1], s[t] = s1 if Jan <= month < 8, s2 otherwise.
-
-x[t] ~ N(m[t], v.pro)
-
-y[t] ~ N(x[t], v.obs)
-
-```{r model2, cache=T, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_theta_JM_1999_2017_",
-                    run.date, ".rds"))
-M2.loo.out <- M$loo.out$loo.out
-M2.jm <- M$jm
-```
-
-Diagnostics of the expected log predictive density indicated that the model was considerably better than the first model. The vast majority of estimated Pareto k parameter was less than 0.7 (```r sum(M2.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M2.loo.out$diagnostics$pareto_k)```). Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
-
-```{r PSIS_M2, fig.cap="Figure. PSIS diagnostic plot for M2"}
-plot(M2.loo.out)
-```
-
-
-The third model contained one slope and two variances: one for nesting season (May through September) and another for the non-nesting season (October through April). 
+The second model contained one slope and two variances: one for nesting season (May through September) and another for the non-nesting season (October through April). 
 
 m[t] = s + x[t-1] 
 
@@ -97,22 +74,65 @@ x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if May <= month < September, v2 otherwis
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model3, cache=TRUE, include=TRUE}
+```{r model2, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_JM_1999_2017_",
                     run.date, ".rds"))
-M3.loo.out <- M$loo.out$loo.out
-M3.jm <- M$jm
+M2.loo.out <- M$jags.out$loo.out$loo.out
+M2.jm <- M$jags.out$jm
 
 ```
 
-Similary to the first model, all estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
+Similary to the first model, all estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M2.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M2.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M2.jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
+
+```{r PSIS_M2, fig.cap="Figure. PSIS diagnostic plot for M2"}
+plot(M2.loo.out)
+```
+
+The third model has a constant slope and month-specific variances.
+
+m[t] = s + x[t-1]
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, 2, ..., 12
+
+y[t] ~ N(x[t], v.obs)
+
+```{r model3, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_theta_JM_1999_2017_",
+                    run.date, ".rds"))
+M3.loo.out <- M$jags.out$loo.out$loo.out
+M3.jm <- M$jags.out$jm
+
+```
+
+Majority of estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M3.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M3.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M3.jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
 
 ```{r PSIS_M3, fig.cap="Figure. PSIS diagnostic plot for M3"}
 plot(M3.loo.out)
 ```
 
 
-The fourth model contained two slopes and two variances: one slope for January through July and another slope for August through December and one variance for nesting season (May through September) and another variance for the non-nesting season (October through April)
+The fourth model is similar to the first except there were two slope parameters: one for January through July and another for August through December. These corresponded to before and after the peak of each nesting season in August. The model is as follows:
+
+m[t] = s[t] + x[t-1], s[t] = s1 if Jan <= month < 8, s2 otherwise.
+
+x[t] ~ N(m[t], v.pro)
+
+y[t] ~ N(x[t], v.obs)
+
+```{r model4, cache=T, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_theta_JM_1999_2017_",
+                    run.date, ".rds"))
+M4.loo.out <- M$jags.out$loo.out$loo.out
+M4.jm <- M$jags.out$jm
+```
+
+Diagnostics of the expected log predictive density indicated that the model was considerably better than the previous models. The vast majority of estimated Pareto k parameter was less than 0.7 (```r sum(M4.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M4.loo.out$diagnostics$pareto_k)```). Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M4.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M4.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M4.jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+
+```{r PSIS_M4, fig.cap="Figure. PSIS diagnostic plot for M4"}
+plot(M4.loo.out)
+```
+
+The fifth model contained two slopes and two variances: one slope for January through July and another slope for August through December and one variance for nesting season (May through September) and another variance for the non-nesting season (October through April)
 
 m[t] = s[t] + x[t-1], s[t] = s1 if Jan <= month < 8, s2 otherwise.
 
@@ -120,105 +140,100 @@ x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if May <= month < September, v2 otherwis
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model4, cache=TRUE, include=TRUE}
+```{r model5, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_theta_JM_1999_2017_", run.date, ".rds"))
-M4.loo.out <- M$loo.out$loo.out
-M4.jm <- M$jm
+M5.loo.out <- M$jags.out$loo.out$loo.out
+M5.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M4.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M4.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M5.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M5.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M5.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M5.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M5.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r PSIS_M4, fig.cap="Figure. PSIS diagnostic plot for M4"}
-plot(M4.loo.out)
+```{r PSIS_M5, fig.cap="Figure. PSIS diagnostic plot for M5"}
+plot(M5.loo.out)
 ```
 
-
-In Model 5, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
+In Model 6, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
 m[t] = s[t] + x[t-1], s[t] = s1 if Jan <= month < 8, s2 otherwise.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model5, cache=TRUE, include=TRUE}
+```{r model6, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_theta_JM_1999_2017_",
              run.date, ".rds"))
-M5.loo.out <- M$loo.out$loo.out
-M5.jm <- M$jm
+M6.loo.out <- M$jags.out$loo.out$loo.out
+M6.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M5.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M5.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M5, fig.cap="Figure. PSIS diagnostic plot for M5"}
-plot(M5.loo.out)
-```
-
-In Model 6, a unique slope and variance parameters were given to each month. 
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
-
-y[t] ~ N(x[t], v.obs)
-
-```{r model6, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_thetaM_JM_1999_2017_", run.date, ".rds"))
-M6.loo.out <- M$loo.out$loo.out
-M6.jm <- M$jm
-
-```
-
-There were some large estimated Pareto k parameter values, where ```r sum(M6.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M6.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M6.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M6.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M6.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M6.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M6.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M6, fig.cap="Figure. PSIS diagnostic plot for M6"}
 plot(M6.loo.out)
 ```
 
-```{r posterior_M6, fig.cap="Figure. Posterior distributions for M6"}
-#bayesplot::mcmc_dens(M7.jm$samples, c("theta.1", "theta.2", "sigma.pro1", "sigma.obs"))
-```
-
-In Model 7, a unique slope parameter was given to each month, whereas there were two variance2. 
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if May <= month < September, v2 otherwise. 
-
-y[t] ~ N(x[t], v.obs, df)
-
-```{r model7, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_thetaM_JM_1999_2017_", run.date, ".rds"))
-M7.loo.out <- M$loo.out$loo.out
-M7.jm <- M$jm
-
-```
-
-There were some large estimated Pareto k parameter values, where ```r sum(M7.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M7.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M7, fig.cap="Figure. PSIS diagnostic plot for M7"}
-plot(M7.loo.out)
-```
-
-Model 8, a unique slope parameter was given to each month, whereas there was one variance. 
+Model 7, a unique slope parameter was given to each month, whereas there was one variance. 
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro), 
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model8, cache=TRUE, include=TRUE}
+```{r model7, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_thetaM_JM_1999_2017_", run.date, ".rds"))
-M8.loo.out <- M$loo.out$loo.out
-M8.jm <- M$jm
+M7.loo.out <- M$jags.out$loo.out$loo.out
+M7.jm <- M$jags.out$jm
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M8.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M8.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M7.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M7.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M7.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M7.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M7.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r PSIS_M8, fig.cap="Figure. PSIS diagnostic plot for M7"}
+```{r PSIS_M7, fig.cap="Figure. PSIS diagnostic plot for M7"}
+plot(M7.loo.out)
+```
+
+In Model 8, a unique slope parameter was given to each month, whereas there were two variance2. 
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if May <= month < September, v2 otherwise. 
+
+y[t] ~ N(x[t], v.obs, df)
+
+```{r model8, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_thetaM_JM_1999_2017_", run.date, ".rds"))
+M8.loo.out <- M$jags.out$loo.out$loo.out
+M8.jm <- M$jags.out$jm
+
+```
+
+There were some large estimated Pareto k parameter values, where ```r sum(M8.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M8.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M8.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M8.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M8.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M8, fig.cap="Figure. PSIS diagnostic plot for M8"}
 plot(M8.loo.out)
 ```
 
-Model 8 is similar to the first model but uses a different distribution for the state model; the observation is  modeled with t distribution. No seasonal change in variance or slope is considered. 
+In Model 9, a unique slope and variance parameters were given to each month. 
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
+
+y[t] ~ N(x[t], v.obs)
+
+```{r model9, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_thetaM_JM_1999_2017_", run.date, ".rds"))
+M9.loo.out <- M$jags.out$loo.out$loo.out
+M9.jm <- M$jags.out$jm
+
+```
+
+There were some large estimated Pareto k parameter values, where ```r sum(M9.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M9.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M9.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M9.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M9.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M9, fig.cap="Figure. PSIS diagnostic plot for M9"}
+plot(M9.loo.out)
+```
+
+Model 10 is similar to the first model but uses a different distribution for the state model; the observation is  modeled with t distribution. No seasonal change in variance or slope is considered. 
 
 m[t] = s + x[t-1]
 
@@ -226,40 +241,18 @@ x[t] ~ N(m[t], v.pro)
 
 y[t] ~ t(x[t], v.obs, df)
 
-```{r model9, cache=TRUE, include=TRUE}
+```{r model10, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_JM_1999_2017_",
                     run.date, ".rds"))
-M9.loo.out <- M$loo.out$loo.out
-M9.jm <- M$jm
+M10.loo.out <- M$jags.out$loo.out$loo.out
+M10.jm <- M$jags.out$jm
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M9.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M9.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M9, fig.cap="Figure. PSIS diagnostic plot for M9"}
-plot(M9.loo.out)
-```
-
-Model 10 is similar to the second except observations are modeled with t distribution.  These corresponded to before and after the peak of each nesting season in August. The model is as follows:
-
-m[t] = s[t] + x[t-1], s[t] = s1 if Jan <= month < 8, s2 otherwise.
-
-x[t] ~ N(m[t], v.pro)
-
-y[t] ~ t(x[t], v.obs, df)
-
-```{r model10, cache=T, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_theta_JM_1999_2017_", 
-                    run.date, ".rds"))
-M10.loo.out <- M$loo.out$loo.out
-M10.jm <- M$jm
-```
-
-The vast majority of estimated Pareto k parameter was less than 0.7 (```r sum(M10.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M10.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+There were some large estimated Pareto k parameter values, where ```r sum(M10.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M10.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M10.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M10.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M10.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M10, fig.cap="Figure. PSIS diagnostic plot for M10"}
 plot(M10.loo.out)
 ```
-
 
 The next model contained one slope and two variances: one for nesting season (May through September) and another for the non-nesting season (October through April) and t distribution for observations. 
 
@@ -272,15 +265,61 @@ y[t] ~ t(x[t], v.obs, df)
 ```{r model11, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_JM_1999_2017_",
                     run.date, ".rds"))
-M11.loo.out <- M$loo.out$loo.out
-M11.jm <- M$jm
+M11.loo.out <- M$jags.out$loo.out$loo.out
+M11.jm <- M$jags.out$jm
 
 ```
 
-Similary to the first model, all estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
+Similary to the first model, all estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M11.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M11.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M11.jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
 
-```{r PSIS_M11} 
+```{r PSIS_M11, fig.cap="Figure. PSIS diagnostic plot for M11."} 
 plot(M11.loo.out)
+```
+
+Model 12 has a constant slope and month-specific variances. The model is as follows:
+
+m[t] = s + x[t-1] 
+
+x[t] ~ N(m[t], v.pro[t]), where v.pro[t] = v.pro[month], month = 1, 2, ..., 12
+
+y[t] ~ t(x[t], v.obs, df)
+
+
+```{r model12, cache=T, include=TRUE}
+
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_JM_1999_2017_", 
+                    run.date1, ".rds"))
+M12.loo.out <- M$jags.out$loo.out$loo.out
+M12.jm <- M$jags.out$jm
+```
+
+The vast majority of estimated Pareto k parameter was greater than 0.7 (```r sum(M12.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M12.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M12.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M12.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M12.jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+
+```{r PSIS_M12, fig.cap="Figure. PSIS diagnostic plot for M12"}
+plot(M12.loo.out)
+```
+
+
+Model 13 is similar to the second except observations are modeled with t distribution.  These corresponded to before and after the peak of each nesting season in August. The model is as follows:
+
+m[t] = s[t] + x[t-1], s[t] = s1 if Jan <= month < 8, s2 otherwise.
+
+x[t] ~ N(m[t], v.pro)
+
+y[t] ~ t(x[t], v.obs, df)
+
+
+```{r model13, cache=T, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_theta_JM_1999_2017_", 
+                    run.date, ".rds"))
+M13.loo.out <- M$jags.out$loo.out$loo.out
+M13.jm <- M$jags.out$jm
+```
+
+The vast majority of estimated Pareto k parameter was less than 0.7 (```r sum(M13.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M13.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M13.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M13.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M13.jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+
+```{r PSIS_M13, fig.cap="Figure. PSIS diagnostic plot for M13"}
+plot(M13.loo.out)
 ```
 
 Next model contained two slopes and two variances: one slope for January through July and another slope for August through December and one variance for nesting season (May through September) and another variance for the non-nesting season (October through April). Observations are modeled with t distribution.
@@ -291,78 +330,37 @@ x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if May <= month < September, v2 otherwis
 
 y[t] ~ N(x[t], v.obs, df)
 
-```{r model12, cache=TRUE, include=TRUE}
+```{r model14, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_theta_JM_1999_2017_", 
                     run.date, ".rds"))
-M12.loo.out <- M$loo.out$loo.out
-M12.jm <- M$jm
+M14.loo.out <- M$jags.out$loo.out$loo.out
+M14.jm <- M$jags.out$jm
 
 ```
 
-There were many large estimated Pareto k parameter values, where ```r sum(M12.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M12.loo.out$diagnostics$pareto_k)``` were larger than 0.7.  Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were many large estimated Pareto k parameter values, where ```r sum(M14.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M14.loo.out$diagnostics$pareto_k)``` were larger than 0.7.  Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M14.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M14.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M14.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r PSIS_M12}
-plot(M12.loo.out)
+```{r PSIS_M14, fig.cap="Figure. PSIS diagnostic plot for M14."}
+plot(M14.loo.out)
 ```
 
-In Model 13, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
+In Model 15, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
 m[t] = s[t] + x[t-1], s[t] = s1 if Jan <= month < 8, s2 otherwise.
 
 x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
 
 y[t] ~ t(x[t], v.obs, df)
 
-```{r model13, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_theta_JM_1999_2017_", run.date, ".rds"))
-M13.loo.out <- M$loo.out$loo.out
-M13.jm <- M$jm
-
-```
-
-There were some large estimated Pareto k parameter values, where ```r sum(M13.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M13.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M13}
-plot(M13.loo.out)
-```
-
-In Model 14, a unique slope and variance parameters were given to each month. 
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
-
-y[t] ~ t(x[t], v.obs, df)
-
-```{r model14, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_thetaM_JM_1999_2017_", run.date, ".rds"))
-M14.loo.out <- M$loo.out$loo.out
-M14.jm <- M$jm
-
-```
-
-There were some large estimated Pareto k parameter values, where ```r sum(M14.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M14.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r}
-plot(M14.loo.out)
-```
-
-
-In Model 15, a unique slope parameter was given to each month, whereas there were two variances. 
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if May <= month < September, v2 otherwise.
-
-y[t] ~ t(x[t], v.obs, df)
-
 ```{r model15, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_JM_1999_2017_", run.date, ".rds"))
-M15.loo.out <- M$loo.out$loo.out
-M15.jm <- M$jm
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_theta_JM_1999_2017_", run.date, ".rds"))
+M15.loo.out <- M$jags.out$loo.out$loo.out
+M15.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M15.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M15.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M15.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M15.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M15.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M15.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M15.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r}
+```{r PSIS_M15, fig.cap="Figure. PSIS diagnostic plot for M15."}
 plot(M15.loo.out)
 ```
 
@@ -374,55 +372,95 @@ x[t] ~ N(m[t], v.pro),
 y[t] ~ t(x[t], v.obs, df)
 
 ```{r model16, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_thetaM_JM_1999_2017_", run.date, ".rds"))
-M16.loo.out <- M$loo.out$loo.out
-M16.jm <- M$jm
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_thetaM_JM_1999_2017_", run.date1, ".rds"))
+M16.loo.out <- M$jags.out$loo.out$loo.out
+M16.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M16.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M16.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M16.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M16.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M16.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M16.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M16.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M16, fig.cap="Figure. PSIS diagnostic plot for M16."}
 plot(M16.loo.out)
 ```
 
-Estimated Pareto k statistics indicated that models 2, 10, and 16 had acceptable predictive performance. We compared these models using using ELPD values.
+In Model 17, a unique slope parameter was given to each month, whereas there were two variances. 
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if May <= month < September, v2 otherwise.
+
+y[t] ~ t(x[t], v.obs, df)
+
+```{r model17, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_JM_1999_2017_", run.date1, ".rds"))
+M17.loo.out <- M$jags.out$loo.out$loo.out
+M17.jm <- M$jags.out$jm
+
+```
+
+There were many large estimated Pareto k parameter values, where ```r sum(M17.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M17.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M17.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M17.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M17.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M17, fig.cap="Figure. PSIS diagnostic plot for M17."}
+plot(M17.loo.out)
+```
+
+In Model 18, a unique slope and variance parameters were given to each month. 
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
+
+y[t] ~ t(x[t], v.obs, df)
+
+```{r model18, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_thetaM_JM_1999_2017_", run.date, ".rds"))
+M18.loo.out <- M$jags.out$loo.out$loo.out
+M18.jm <- M$jags.out$jm
+
+```
+
+There were some large estimated Pareto k parameter values, where ```r sum(M18.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M18.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M18.jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M18.jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M18.jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M18, fig.cap="Figure. PSIS diagnostic plot for M18."}
+plot(M18.loo.out)
+```
+
+#Model Comparison
+Estimated Pareto k statistics indicated that models 4, 7, 13, 14, and 16 had acceptable predictive performance. We compared these models using using ELPD values.
 
 ```{r ModelComparison, include=TRUE}
-M.compare <- compare(M2.loo.out, M10.loo.out, M16.loo.out)
+M.compare <- compare(M4.loo.out, M7.loo.out, M13.loo.out, M14.loo.out, M16.loo.out)
 print(M.compare)
 ```
 
-Model 16, which contained month-specific slopes and one variance, turned out to be the best.
+Model 7, which contained month-specific slopes and one variance with Normal observation model, turned out to be the best. The second best was the same structure but with t-distribution for the observation. 
 
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
 x[t] ~ N(m[t], v.pro), 
 
-y[t] ~ t(x[t], v.obs, df)
+y[t] ~ N(x[t], v.obs, df)
 
 The posterior distributions of the model are shown below.
 
-```{r posterior_M16, fig.cap="Figure. Posterior distribuitons of slope parameters for M16"}
-bayesplot::mcmc_dens(M16.jm$samples, c("theta.1[1]", "theta.1[2]", "theta.1[3]", "theta.1[4]",
+```{r posterior_M7, fig.cap="Figure. Posterior distribuitons of slope parameters for M7"}
+bayesplot::mcmc_dens(M7.jm$samples, c("theta.1[1]", "theta.1[2]", "theta.1[3]", "theta.1[4]",
                                       "theta.1[5]", "theta.1[6]", "theta.1[7]", "theta.1[8]",
                                       "theta.1[9]", "theta.1[10]", "theta.1[11]", "theta.1[12]"))
 ```
 
-```{r posterior_M16_2, fig.cap="Figure. Posterior distributions for the standard deviation of the process (sigma.pro1), standard deviation of observations (sigma.obs), and degrees of freedom (df) parameter."}
-bayesplot::mcmc_dens(M16.jm$samples, c("sigma.pro1", "sigma.obs", "df"))
+The slope parameters indicated increasing trend to July and decreased from August through November. 
+
+```{r posterior_M7_2, fig.cap="Figure. Posterior distributions for the standard deviation of the process (sigma.pro1) and standard deviation of observations (sigma.obs)."}
+bayesplot::mcmc_dens(M7.jm$samples, c("sigma.pro1", "sigma.obs"))
 ```
 
-The slope parameters indicated increasing trend to July and decreased from August through November. 
 
 We use this model to impute missing data points.
 
 ```{r}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_thetaM_JM_1999_2017_", run.date, ".rds"))
-M16.loo.out <- M$loo.out$loo.out
-M16.jm <- M$jm
-Xs.stats <- M$Xs.stats
-ys.stats <- M$ys.stats
+M7 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_thetaM_JM_1999_2017_", run.date, ".rds"))
+Xs.stats <- M7$Xs.stats
+ys.stats <- M7$ys.stats
 p.1 <- ggplot() +
   #geom_point(data = ys.stats,
   #           aes(x = time, y = mode_y), color = "blue") +
@@ -448,7 +486,8 @@ Then, combine all counts per year.
 
 ```{r }
 # need to pool counts per nesting season - not by calendar year
-Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) -> Xs.stats
+Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
+  mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> Xs.stats
 ys.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) -> ys.stats
 
 seasons <- as.matrix(unique(Xs.stats$season))
@@ -457,7 +496,7 @@ X.posterior.season <- lapply(apply(seasons,
                                    MARGIN = 1,
                                    FUN = extract.posterior.jagsUI, 
                                    Xs.stats = Xs.stats, 
-                                   samples = M16.jm$samples),
+                                   samples = M7.jm$samples),
                              FUN = function(x) exp(x$samples) %>% rowSums())
 
 Xs.season <- as.data.frame(matrix(unlist(lapply(X.posterior.season, 
@@ -481,6 +520,9 @@ p.JM.estimated.counts <- ggplot() +
              color = "red") +
   labs(title = 'Jamursba-Medi', x = 'Season', y = "Nest counts")
 
+ggsave(filename = "figures/CountsPerSeason_best.png",
+       device = "png", dpi = 600,
+       plot = p.JM.estimated.counts)
 print(p.JM.estimated.counts)
 ```
 
