--- a/NestCountsImputation_W.Rmd
+++ b/NestCountsImputation_W.Rmd
@@ -8,6 +8,8 @@ rm(list=ls())
 knitr::opts_chunk$set(echo = TRUE)
 source("HILL_BiOp_functions.R")
 run.date <- "2018-10-22"
+run.date1 <- "2018-10-23"
+
 ```
 
 This document describes how leatherback turtle nest count data were imputed for Wermon. All models were ran separately and results stored in .rds files. 
@@ -67,28 +69,7 @@ plot(M1.loo.out)
 ```
 
 ##Model 2
-The second model is similar to the first except there were two slope parameters: one for April through July and October through December (increasing months) and another for the remainder: January through March August through September (decreasing months). The model is as follows:
-
-m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
-
-x[t] ~ N(m[t], v.pro)
-
-y[t] ~ N(x[t], v.obs)
-
-```{r model2, cache=T, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_theta_W_2006_2014_", run.date, ".rds"))
-M2.loo.out <- M$jags.out$loo.out$loo.out
-M2.jm <- M$jags.out$jm
-```
-
-Diagnostics of the expected log predictive density indicated that the model was considerably better than the first model. Many of estimated Pareto k parameter was less than 0.7 (```r sum(M2.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M2.loo.out$diagnostics$pareto_k)```).Although ```r sum(M2.loo.out$diagnostics$pareto_k > 0.7)``` were greater than 0.7.  Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
-
-```{r PSIS_M2, fig.cap="Figure. PSIS diagnostic plot for M2"}
-plot(M2.loo.out)
-```
-
-##Model 3
-The third model contained one slope and two variances: one for September and October and another for the rest of the year (this was decided after looking at posteriors of variances when each month was given unique variance parameter - I think...). 
+The next model contained one slope and two variances: one for September and October and another for the rest of the year (this was decided after looking at posteriors of variances when each month was given unique variance parameter - I think...). 
 
 m[t] = s + x[t-1] 
 
@@ -96,8 +77,30 @@ x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise.
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model3, cache=TRUE, include=TRUE}
+```{r model2, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_W_2006_2014_", run.date, ".rds"))
+M2.loo.out <- M$jags.out$loo.out$loo.out
+M2.jm <- M$jags.out$jm
+
+```
+
+Almost all estimated Pareto k statistics were greater than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). We do not consider this model further.
+
+```{r PSIS_M2, fig.cap="Figure. PSIS diagnostic plot for M2"}
+plot(M2.loo.out)
+```
+
+##Model 3
+The next model contained one slope and month-specific variances. 
+
+m[t] = s + x[t-1] 
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v[month], month = 1, 2, ..., 12
+
+y[t] ~ N(x[t], v.obs)
+
+```{r model2, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_W_2006_2014_", run.date, ".rds"))
 M3.loo.out <- M$jags.out$loo.out$loo.out
 M3.jm <- M$jags.out$jm
 
@@ -108,9 +111,30 @@ Almost all estimated Pareto k statistics were greater than 0.7. Convergence stat
 ```{r PSIS_M3, fig.cap="Figure. PSIS diagnostic plot for M3"}
 plot(M3.loo.out)
 ```
-
 ##Model 4
-The fourth model contained two slopes and two variances: combination of Model 2 and Model 3.
+The next model is similar to the first except there were two slope parameters: one for April through July and October through December (increasing months) and another for the remainder: January through March August through September (decreasing months). The model is as follows:
+
+m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
+
+x[t] ~ N(m[t], v.pro)
+
+y[t] ~ N(x[t], v.obs)
+
+```{r model4, cache=T, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_theta_W_2006_2014_", run.date, ".rds"))
+M4.loo.out <- M$jags.out$loo.out$loo.out
+M4.jm <- M$jags.out$jm
+```
+
+Diagnostics of the expected log predictive density indicated that the model was considerably better than the first model. Many of estimated Pareto k parameter was less than 0.7 (```r sum(M4.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M4.loo.out$diagnostics$pareto_k)```).Although ```r sum(M4.loo.out$diagnostics$pareto_k > 0.7)``` were greater than 0.7.  Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+
+```{r PSIS_M4, fig.cap="Figure. PSIS diagnostic plot for M4"}
+plot(M4.loo.out)
+```
+
+
+##Model 5
+The fifth model contained two slopes and two variances: combination of Model 2 and Model 3.
 
 m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
 
@@ -118,21 +142,21 @@ x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise.
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model4, cache=TRUE, include=TRUE}
+```{r model5, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_theta_W_2006_2014_", run.date, ".rds"))
-M4.loo.out <- M$jags.out$loo.out$loo.out
-M4.jm <- M$jags.out$jm
+M5.loo.out <- M$jags.out$loo.out$loo.out
+M5.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M4.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M4.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were some large estimated Pareto k parameter values, where ```r sum(M5.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M5.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r PSIS_M4, fig.cap="Figure. PSIS diagnostic plot for M4"}
-plot(M4.loo.out)
+```{r PSIS_M5, fig.cap="Figure. PSIS diagnostic plot for M5"}
+plot(M5.loo.out)
 ```
 
-##Model 5
-In Model 5, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
+##Model 6
+In Model 6, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
 
 m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
 
@@ -140,68 +164,20 @@ x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model5, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_theta_W_2006_2014_", run.date, ".rds"))
-M5.loo.out <- M$jags.out$loo.out$loo.out
-M5.jm <- M$jags.out$jm
-
-```
-
-Majority of estimated Pareto k parameter values were large, where ```r sum(M5.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M5.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M5, fig.cap="Figure. PSIS diagnostic plot for M5"}
-plot(M5.loo.out)
-```
-
-##Model 6
-In Model 6, a unique slope and variance parameters were given to each month. 
-
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
-
-y[t] ~ N(x[t], v.obs)
-
 ```{r model6, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_thetaM_W_2006_2014_", run.date, ".rds"))
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_theta_W_2006_2014_", run.date, ".rds"))
 M6.loo.out <- M$jags.out$loo.out$loo.out
 M6.jm <- M$jags.out$jm
 
 ```
 
-Majority of estimated Pareto k parameters were large, where ```r sum(M6.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M6.loo.out$diagnostics$pareto_k)``` were > 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+Majority of estimated Pareto k parameter values were large, where ```r sum(M6.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M6.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M6, fig.cap="Figure. PSIS diagnostic plot for M6"}
 plot(M6.loo.out)
 ```
 
-```{r posterior_M6, fig.cap="Figure. Posterior distributions for M6"}
-#bayesplot::mcmc_dens(M7.jm$samples, c("theta.1", "theta.2", "sigma.pro1", "sigma.obs"))
-```
-
 ##Model 7
-In Model 7, a unique slope parameter was given to each month, whereas there were two variance2. 
-
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise. 
-
-y[t] ~ N(x[t], v.obs, df)
-
-```{r model7, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_thetaM_W_2006_2014_", run.date, ".rds"))
-M7.loo.out <- M$jags.out$loo.out$loo.out
-M7.jm <- M$jags.out$jm
-
-```
-
-There were some large estimated Pareto k parameter values, where ```r sum(M7.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M7.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M7, fig.cap="Figure. PSIS diagnostic plot for M7"}
-plot(M7.loo.out)
-```
-
-##Model 8
 Model 8, a unique slope parameter was given to each month, whereas there was one variance. 
 
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
@@ -210,10 +186,32 @@ x[t] ~ N(m[t], v.pro),
 
 y[t] ~ N(x[t], v.obs)
 
-```{r model8, cache=TRUE, include=TRUE}
+```{r model7, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_thetaM_W_2006_2014_", run.date, ".rds"))
+M7.loo.out <- M$jags.out$loo.out$loo.out
+M7.jm <- M$jags.out$jm
+```
+
+There were some large estimated Pareto k parameter values, where ```r sum(M7.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M7.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M7, fig.cap="Figure. PSIS diagnostic plot for M7"}
+plot(M7.loo.out)
+```
+
+##Model 8
+In Model 8, a unique slope parameter was given to each month, whereas there were two variance2. 
+
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise. 
+
+y[t] ~ N(x[t], v.obs, df)
+
+```{r model8, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_var_thetaM_W_2006_2014_", run.date, ".rds"))
 M8.loo.out <- M$jags.out$loo.out$loo.out
 M8.jm <- M$jags.out$jm
+
 ```
 
 There were some large estimated Pareto k parameter values, where ```r sum(M8.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M8.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
@@ -223,7 +221,30 @@ plot(M8.loo.out)
 ```
 
 ##Model 9
-Model 9 is similar to Model 1 but uses a different distribution for the state model; the observation is  modeled with t distribution. No seasonal change in variance or slope is considered. 
+In Model 9, a unique slope and variance parameters were given to each month. 
+
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
+
+y[t] ~ N(x[t], v.obs)
+
+```{r model9, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_norm_varM_thetaM_W_2006_2014_", run.date, ".rds"))
+M9.loo.out <- M$jags.out$loo.out$loo.out
+M9.jm <- M$jags.out$jm
+
+```
+
+Majority of estimated Pareto k parameters were large, where ```r sum(M9.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M9.loo.out$diagnostics$pareto_k)``` were > 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M9, fig.cap="Figure. PSIS diagnostic plot for M9"}
+plot(M9.loo.out)
+```
+
+
+##Model 10
+Model 10 is similar to Model 1 but uses a different distribution for the state model; the observation is  modeled with t distribution. No seasonal change in variance or slope is considered. 
 
 m[t] = s + x[t-1]
 
@@ -231,38 +252,18 @@ x[t] ~ N(m[t], v.pro)
 
 y[t] ~ t(x[t], v.obs, df)
 
-```{r model9, cache=TRUE, include=TRUE}
+```{r model10, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_W_2006_2014_", run.date, ".rds"))
-M9.loo.out <- M$jags.out$loo.out$loo.out
-M9.jm <- M$jags.out$jm
-```
-
-There were some large estimated Pareto k parameter values, where ```r sum(M9.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M9.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M9, fig.cap="Figure. PSIS diagnostic plot for M9"}
-plot(M9.loo.out)
-```
-
-
-Model 10 is similar to Model 2 except observations are modeled with t distribution.  
-
-m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
-
-x[t] ~ N(m[t], v.pro)
-
-y[t] ~ t(x[t], v.obs, df)
-
-```{r model10, cache=T, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_theta_W_2006_2014_", run.date, ".rds"))
 M10.loo.out <- M$jags.out$loo.out$loo.out
 M10.jm <- M$jags.out$jm
 ```
 
-Many of estimated Pareto k parameter was greater than 0.7 (```r sum(M10.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M10.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+There were some large estimated Pareto k parameter values, where ```r sum(M10.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M10.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
 ```{r PSIS_M10, fig.cap="Figure. PSIS diagnostic plot for M10"}
 plot(M10.loo.out)
 ```
+
 
 ##Model 11
 The next model contained one slope and two variances: one for September and October and another for the remainder of the year. t distribution was used for observations. 
@@ -287,6 +288,49 @@ plot(M11.loo.out)
 ```
 
 ##Model 12
+Model 12 has a constant slope and month-specific variance.  
+
+m[t] = s + x[t-1]
+
+x[t] ~ N(m[t], v.pro[t]), where v.pro[t] = v[month], month = 1, 2, ..., 12
+
+y[t] ~ t(x[t], v.obs, df)
+
+```{r model13, cache=T, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_W_2006_2014_", run.date, ".rds"))
+M12.loo.out <- M$jags.out$loo.out$loo.out
+M12.jm <- M$jags.out$jm
+```
+
+Many of estimated Pareto k parameter was greater than 0.7 (```r sum(M12.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M12.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+
+```{r PSIS_M12, fig.cap="Figure. PSIS diagnostic plot for M12"}
+plot(M12.loo.out)
+```
+
+
+##Model 13
+Model 13 is similar to Model 2 except observations are modeled with t distribution.  
+
+m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
+
+x[t] ~ N(m[t], v.pro)
+
+y[t] ~ t(x[t], v.obs, df)
+
+```{r model13, cache=T, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_theta_W_2006_2014_", run.date, ".rds"))
+M13.loo.out <- M$jags.out$loo.out$loo.out
+M13.jm <- M$jags.out$jm
+```
+
+Many of estimated Pareto k parameter was greater than 0.7 (```r sum(M13.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M13.loo.out$diagnostics$pareto_k)```. Convergence was reached for all monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```).  
+
+```{r PSIS_M13, fig.cap="Figure. PSIS diagnostic plot for M13"}
+plot(M13.loo.out)
+```
+
+##Model 14
 Next model contained two slopes and two variances: one slope for January through July and another slope for August through December and one variance for nesting season (May through September) and another variance for the non-nesting season (October through April). Observations are modeled with t distribution.
 
 m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
@@ -297,18 +341,18 @@ y[t] ~ N(x[t], v.obs, df)
 
 ```{r model12, cache=TRUE, include=TRUE}
 M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_theta_W_2006_2014_", run.date, ".rds"))
-M12.loo.out <- M$jags.out$loo.out$loo.out
-M12.jm <- M$jags.out$jm
+M14.loo.out <- M$jags.out$loo.out$loo.out
+M14.jm <- M$jags.out$jm
 
 ```
 
-There were many large estimated Pareto k parameter values, where ```r sum(M12.loo.out$diagnostics$pareto_k < 0.7)``` out of ```r length(M12.loo.out$diagnostics$pareto_k)``` were larger than 0.7.  Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were many large estimated Pareto k parameter values, where ```r sum(M14.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M14.loo.out$diagnostics$pareto_k)``` were larger than 0.7.  Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r PSIS_M12}
-plot(M12.loo.out)
+```{r PSIS_M14}
+plot(M14.loo.out)
 ```
 
-##Model 13
+##Model 15
 In Model 13, a unique variance parameter was given to each month, whereas two seasonal slopes were defined as before.  
 
 m[t] = s[t] + x[t-1], s[t] = s1 if month = 4, 5, 6, 10, 11 or 12. s2 otherwise.
@@ -317,61 +361,19 @@ x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
 
 y[t] ~ t(x[t], v.obs, df)
 
-```{r model13, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_theta_W_2006_2014_", run.date, ".rds"))
-M13.loo.out <- M$jags.out$loo.out$loo.out
-M13.jm <- M$jags.out$jm
-
-```
-
-There were many large estimated Pareto k parameter values, where ```r sum(M13.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M13.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r PSIS_M13}
-plot(M13.loo.out)
-```
-
-In Model 14, a unique slope and variance parameters were given to each month. 
-
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
-
-y[t] ~ t(x[t], v.obs, df)
-
-```{r model14, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_thetaM_W_2006_2014_", run.date, ".rds"))
-M14.loo.out <- M$jags.out$loo.out$loo.out
-M14.jm <- M$jags.out$jm
-
-```
-
-There were many large estimated Pareto k parameter values, where ```r sum(M14.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M14.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
-
-```{r}
-plot(M14.loo.out)
-```
-
-##Model 15
-In Model 15, a unique slope parameter was given to each month, whereas there were two variances. 
-
-m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
-
-x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise.
-
-y[t] ~ t(x[t], v.obs, df)
-
 ```{r model15, cache=TRUE, include=TRUE}
-M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2014_", run.date, ".rds"))
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_theta_W_2006_2014_", run.date, ".rds"))
 M15.loo.out <- M$jags.out$loo.out$loo.out
 M15.jm <- M$jags.out$jm
 
 ```
 
-There were some large estimated Pareto k parameter values, where ```r sum(M15.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M15.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+There were many large estimated Pareto k parameter values, where ```r sum(M15.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M15.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
 
-```{r}
+```{r PSIS_M15}
 plot(M15.loo.out)
 ```
+
 
 ##Model 16
 In Model 16, a unique slope parameter was given to each month, whereas there was one variance. 
@@ -395,14 +397,61 @@ Several large estimated Pareto k parameter values were found, where ```r sum(M16
 plot(M16.loo.out)
 ```
 
-Estimated Pareto k statistics indicated that models 2, 8, 10, 15, and 16 had better predictive performance than the rest. We compared these models using using ELPD values.
+
+##Model 17
+In Model 17, a unique slope parameter was given to each month, whereas there were two variances. 
+
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v1 if month = 9 or 10, v2 otherwise.
+
+y[t] ~ t(x[t], v.obs, df)
+
+```{r model17, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2014_", run.date, ".rds"))
+M17.loo.out <- M$jags.out$loo.out$loo.out
+M17.jm <- M$jags.out$jm
+
+```
+
+There were some large estimated Pareto k parameter values, where ```r sum(M17.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M17.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M17}
+plot(M17.loo.out)
+```
+
+##Model 18
+In Model 18, a unique slope and variance parameters were given to each month. 
+
+m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
+
+x[t] ~ N(m[t], v.pro[t]), v.pro[t] = v.pro[month], month = 1, ..., 12
+
+y[t] ~ t(x[t], v.obs, df)
+
+```{r model18, cache=TRUE, include=TRUE}
+M <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_varM_thetaM_W_2006_2014_", run.date, ".rds"))
+M18.loo.out <- M$jags.out$loo.out$loo.out
+M18.jm <- M$jags.out$jm
+
+```
+
+There were many large estimated Pareto k parameter values, where ```r sum(M18.loo.out$diagnostics$pareto_k > 0.7)``` out of ```r length(M18.loo.out$diagnostics$pareto_k)``` were larger than 0.7. Convergence statistics indicated acceptable convergence among the monitored parameters (minimum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = min, na.rm = T))), 3)```, mean = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = mean, na.rm = T))), 3)```, and maximum = ```r signif(min(unlist(lapply(M$jags.out$jm$Rhat, FUN = max, na.rm = T))), 3)```). 
+
+```{r PSIS_M18}
+plot(M18.loo.out)
+```
+
+
+#Model comparison
+Estimated Pareto k statistics indicated that models 4, 7, 13, 16, and 17 had better predictive performance than the rest. We compared these models using using ELPD values.
 
 ```{r ModelComparison, include=TRUE}
-M.compare <- compare(M2.loo.out, M8.loo.out, M10.loo.out, M15.loo.out,  M16.loo.out)
+M.compare <- compare(M4.loo.out, M7.loo.out, M13.loo.out, M16.loo.out,  M17.loo.out)
 print(M.compare)
 ```
 
-Model 15, which contained month-specific slopes and two variances, turned out to be the best.  
+Model 17, which contained month-specific slopes and two variances, turned out to be the best.  
 
 m[t] = s[t] + x[t-1], s[t] = s[month], where month = 1, ..., 12.
 
@@ -412,14 +461,14 @@ y[t] ~ t(x[t], v.obs, df)
 
 The posterior distributions of the model are shown below.
 
-```{r posterior_M15, fig.cap="Figure. Posterior distribuitons of slope parameters for M15"}
-bayesplot::mcmc_dens(M15.jm$samples, c("theta.1[1]", "theta.1[2]", "theta.1[3]", "theta.1[4]",
+```{r posterior_M17, fig.cap="Figure. Posterior distribuitons of slope parameters for M17"}
+bayesplot::mcmc_dens(M17.jm$samples, c("theta.1[1]", "theta.1[2]", "theta.1[3]", "theta.1[4]",
                                       "theta.1[5]", "theta.1[6]", "theta.1[7]", "theta.1[8]",
                                       "theta.1[9]", "theta.1[10]", "theta.1[11]", "theta.1[12]"))
 ```
 
-```{r posterior_M15_2, fig.cap="Figure. Posterior distributions for the standard deviation of the process (sigma.pro1), standard deviation of observations (sigma.obs), and degrees of freedom (df) parameter."}
-bayesplot::mcmc_dens(M15.jm$samples, c("sigma.pro1", "sigma.pro2", "sigma.obs", "df"))
+```{r posterior_M17_2, fig.cap="Figure. Posterior distributions for the standard deviation of the process (sigma.pro1), standard deviation of observations (sigma.obs), and degrees of freedom (df) parameter."}
+bayesplot::mcmc_dens(M17.jm$samples, c("sigma.pro1", "sigma.pro2", "sigma.obs", "df"))
 ```
 
 The slope parameters indicated increasing trend to July and decreased from August through November. 
@@ -427,10 +476,10 @@ The slope parameters indicated increasing trend to July and decreased from Augus
 We use this model to impute missing data points. First, just look at the 2006-2014 dataset. 
 
 ```{r}
-M15 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2014_", run.date, ".rds"))
+M17 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2014_", run.date, ".rds"))
 
-Xs.stats <- M15$Xs.stats
-ys.stats <- M15$ys.stats
+Xs.stats <- M17$Xs.stats
+ys.stats <- M17$ys.stats
 p.1 <- ggplot() +
   #geom_point(data = ys.stats,
   #           aes(x = time, y = mode_y), color = "blue") +
@@ -470,7 +519,7 @@ X.posterior.seasons <- lapply(apply(seasons,
                                 MARGIN = 1,
                                 FUN = extract.posterior.jagsUI, 
                                 Xs.stats = Xs.stats, 
-                                samples = M15.jm$samples),
+                                samples = M17.jm$samples),
                           FUN = function(x) exp(x$samples) %>% rowSums())
 
 Xs.season <- as.data.frame(matrix(unlist(lapply(X.posterior.seasons, 
@@ -499,13 +548,12 @@ print(p.W.estimated.counts)
 
 Then, bring in the results for the entire dataset. 
 ```{r}
-run.date1 <- "2018-10-23"
-M15 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2017_", run.date1, ".rds"))
+M17 <- readRDS(paste0("RData/jagsout_SSAR1_logY_norm_t_var_thetaM_W_2006_2017_", run.date1, ".rds"))
 
-M15$Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
+M17$Xs.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
   mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> Xs.stats
 
-M15$ys.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
+M17$ys.stats %>% mutate(season = ifelse(month < 4, year - 1, year)) %>% 
   mutate(summer = ifelse(month > 3 & month < 10, 1, 0)) -> ys.stats
 
 seasons <- as.matrix(unique(Xs.stats$season))
@@ -541,7 +589,7 @@ X.posterior.seasons <- lapply(apply(seasons,
                                     MARGIN = 1,
                                     FUN = extract.posterior.jagsUI, 
                                     Xs.stats = Xs.stats, 
-                                    samples = M15$jags.out$jm$samples),
+                                    samples = M17$jags.out$jm$samples),
                               FUN = function(x){
                                 n.summer <- exp(x$samples[, x$summer == 1]) %>% rowSums() 
                                 n.winter <- exp(x$samples[, x$summer == 0]) %>% rowSums() 
@@ -601,7 +649,7 @@ p.W.estimated.counts <- ggplot() +
 
 print(p.W.estimated.counts)
 
-write.csv(Xs.season, file = "data/estimatedX_M15.csv",
+write.csv(Xs.season, file = "data/estimatedX_M17.csv",
           quote = F, row.names = F)
 
 ```
